fix: resolve concurrency and code duplication bugs in RagTranslationService
- Fix concurrent ID lookup race condition: storeTranslation now returns
  memoryId directly instead of querying back via SELECT LIMIT 1
- Deduplicate search/store logic into doSearch/doStore private methods
- Replace Map<String,String> port contract with VectorSearchResult record
  to eliminate string-keyed field access
- Fix NPE risk: skip entries with unparseable memoryId in adapter
- Precompile whitespace regex, use Locale.ROOT for toLowerCase
- Move Redis key prefix into adapter, optimize vector formatting

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>